--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
   ],
   "dependencies": {
     "@types/mdast": "^3.0.0",
-    "mdast-util-directive": "^2.0.0",
-    "micromark-extension-directive": "^2.0.0",
+    "mdast-util-directive": "https://github.com/m-haketa/mdast-util-directive.git",
+    "micromark-extension-directive": "https://github.com/m-haketa/micromark-extension-directive.git",
     "unified": "^10.0.0"
   },
   "devDependencies": {
